# cargo-features = ["edition2024"]
[package]
name = "asset_bundler"
version = "0.3.13"
edition = "2024"

[dependencies]
# aes = "0.8.4"
# block-padding = "0.3.3"
chacha20poly1305 = "0.10.1"
chrono = "0.4.39"
cipher = "0.4.4"
ecolor = "0.31.0"
eframe = "0.31.0"
egui = "0.31.0"
# egui-modal = "0.6.0"
egui_extras = { version = "0.31.0", features = ["all_loaders"] }
getrandom = "0.3.1"
# glam = "0.30.0"
hex = "0.4.3"
hmac = "0.12.1"
image = { version = "0.25.5", features = ["webp"] }
pbkdf2 = "0.12.2"
rand = "0.9.0"
rayon = "1.10.0"
#image = { version = "0.25", features = ["png"] }
rfd = "0.15.2"
rodio = { version = "0.20.1", features = ["minimp3"] }
sha2 = "0.10.8"
# tokio = { version = "1.43.0", features = ["full"] }
# toml = "0.8.20"
walkdir = "2.5.0"
webp = "0.3.0"
# xor-utils = "0.6.0"
zstd = { version = "0.13.2", features = ["experimental", "zstdmt"] }

[target.x86_64-pc-windows-gnu]
windows = { enable = true }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"

[profile.release]
lto = "thin"
strip = "debuginfo"
opt-level = "s"
debug = false


[features]
statystyki = []
raw = []

